# pyroll-freiberg-flow-stress

./: .gitmodules  LICENSE  README.md  hatch.toml  pyproject.toml
docs/: docs.md  model.md  usage.md
pyroll/freiberg_flow_stress/: __init__.py  freiberg_flow_stress.py  hookimpls.py  hookspecs.py  materials.py  report.py
pyroll/freiberg_flow_stress/materials/: c20.py  c45.py  s355j2.py
pyroll_freiberg_flow_stress/: __init__.py  freiberg_flow_stress.py  hookspecs.py
pyroll_freiberg_flow_stress/materials/: __init__.py  c20.py  c45.py  s355j2.py
tests/: test_hook.py  test_register_coefficients.py  test_solve.py  test_solve_pillars.py
