[project]
name = "pyroll-freiberg-flow-stress"
description = "Plugin for PyRoll providing Freiberg flow stress approach and material database."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
packages = [
    { include = "pyroll/freiberg_flow_stress" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.9, <4.0"
dependencies = ["pyroll-core ~= 2.0.0b"]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
