[project]
name = "pyroll-freiberg-flow-stress"
description = "Plugin for PyRoll providing Freiberg flow stress approach and material database."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 2.1"
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

dynamic = ["version"]

[project.optional-dependencies]
pillar-model = [
    "pyroll-pillar-model ~= 2.1",
]



[project.urls]
Homepage = "https://pyroll.readthedocs.io"
Repository = "https://github.com/pyroll-project/pyroll-freiberg-flow-stress"
Documentation = "https://github.com/pyroll-project/pyroll-freiberg-flow-stress/blob/main/docs/docs.pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
